--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Manage/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Manage/Index.cshtml
@@ -88,6 +88,48 @@
 
     </dl>
     <h2>My Comparison Patients</h2><br />
+    @Html.ActionLink("Compare New", "Create","Patients", new { isCompare = true }, null)
+    @using (Html.BeginForm("Index", "Manage", FormMethod.Get,
+    new { @class = "Search-form" }))
+    {
+    <h4>
+        Search for patient(s)
+    </h4>
+    <div class="row">
+        <div class="form-inline" style="margin:4px 30px 2px 40px;">
+            <p>
+                ID: <br />@Html.TextBox("q")
+            </p>
+        </div>
+        <div class="form-inline" style="margin:4px 30px 2px 4px;">
+            <p>
+                Sex: <br />@Html.DropDownList("sex")
+            </p>
+        </div>
+        <div class="form-inline" style="margin:4px 30px 2px 4px;">
+            <p>
+                Classification: <br />@Html.DropDownList("clss")
+            </p>
+        </div>
+        <div class="form-inline" style="margin:4px 30px 2px 4px;">
+            <p>
+                Location: <br />@Html.DropDownList("tumLoc")
+            </p>
+        </div>
+        <div class="form-inline" style="margin:4px 30px 2px 4px;">
+            <p>
+                Grade: <br />@Html.DropDownList("grade")
+            </p>
+        </div>
+        <div class="form-inline">
+            <br />
+            <div id="buttonSearch">
+                <input type="submit" value="Search" id="buttonSubmit" />
+            </div>
+        </div>
+    </div>
+
+    }
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -117,7 +159,7 @@
                 </th>
                 <th></th>
             </tr>
-            
+
             @foreach (var item in Model.MyComparePatients)
             {
                 <tr>
