embedded video on home page

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -2,10 +2,15 @@
 	ViewBag.Title = "Home Page";
 }
 
+
 <div class="jumbotron">
 	<h1>Brain Tumor Application </h1>
 	<p class="lead">Welcome! Use the links above to navigate.</p>
+
+    @*demo: visual guide through tumor web app*@
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/Q6emEMX2NVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
+
 
 <div class="row">
 	<div class="col-md-4">
@@ -13,13 +18,14 @@
 		<h2>Description</h2>
 		<p>
 			We have compiled a database of existing patients and have created a comparison algorithm to analyze patterns between certain variables involved in each patients condition and the effects on the success rate of a variety of treatments. We have also created a user interface that allows users to login or register to gain access to the database showing them the conclusions of our comparison algorithm, as well as allow them to input information regarding a specific patient and receive both a computative analysis of the patients conditions and a recommended course of action calculated using the database.
-		</p>
+        </p>
 		<h2>Let Us Help You</h2>
 		<p>
 			Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356.
 		</p>
 		<p>
-			Access our code at https://github.com/SCCapstone/TumorTaskforce
+            @*Repo is set to private, users won't be able to view the code unless they log into GitHub*@
+			@*Access our code at  <a href="https://github.com/SCCapstone/TumorTaskforce"> https://github.com/SCCapstone/TumorTaskforce </a>*@
 		</p>
 	</div>
 
